parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DECR_TOKEN
    INCR_TOKEN

Grammar

Rule 0     S' -> program
Rule 1     program -> MEMORY_SET_TOKEN NUMBER_TOKEN
Rule 2     program -> IOCMD_TOKEN IOARG_TOKEN
Rule 3     program -> MATH_TOKEN NUMBER_TOKEN
Rule 4     program -> MEMORY_CMD_TOKEN MEMORY_LOC_TOKEN
Rule 5     io -> IOCMD_TOKEN IOARG_TOKEN
Rule 6     set_memory -> MEMORY_SET_TOKEN NUMBER_TOKEN
Rule 7     math -> MATH_TOKEN NUMBER_TOKEN

Terminals, with rules where they appear

DECR_TOKEN           : 
INCR_TOKEN           : 
IOARG_TOKEN          : 2 5
IOCMD_TOKEN          : 2 5
MATH_TOKEN           : 3 7
MEMORY_CMD_TOKEN     : 4
MEMORY_LOC_TOKEN     : 4
MEMORY_SET_TOKEN     : 1 6
NUMBER_TOKEN         : 1 3 6 7
error                : 

Nonterminals, with rules where they appear

io                   : 
math                 : 
program              : 0
set_memory           : 

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . MEMORY_SET_TOKEN NUMBER_TOKEN
    (2) program -> . IOCMD_TOKEN IOARG_TOKEN
    (3) program -> . MATH_TOKEN NUMBER_TOKEN
    (4) program -> . MEMORY_CMD_TOKEN MEMORY_LOC_TOKEN

    MEMORY_SET_TOKEN shift and go to state 2
    IOCMD_TOKEN     shift and go to state 3
    MATH_TOKEN      shift and go to state 4
    MEMORY_CMD_TOKEN shift and go to state 5

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> MEMORY_SET_TOKEN . NUMBER_TOKEN

    NUMBER_TOKEN    shift and go to state 6


state 3

    (2) program -> IOCMD_TOKEN . IOARG_TOKEN

    IOARG_TOKEN     shift and go to state 7


state 4

    (3) program -> MATH_TOKEN . NUMBER_TOKEN

    NUMBER_TOKEN    shift and go to state 8


state 5

    (4) program -> MEMORY_CMD_TOKEN . MEMORY_LOC_TOKEN

    MEMORY_LOC_TOKEN shift and go to state 9


state 6

    (1) program -> MEMORY_SET_TOKEN NUMBER_TOKEN .

    $end            reduce using rule 1 (program -> MEMORY_SET_TOKEN NUMBER_TOKEN .)


state 7

    (2) program -> IOCMD_TOKEN IOARG_TOKEN .

    $end            reduce using rule 2 (program -> IOCMD_TOKEN IOARG_TOKEN .)


state 8

    (3) program -> MATH_TOKEN NUMBER_TOKEN .

    $end            reduce using rule 3 (program -> MATH_TOKEN NUMBER_TOKEN .)


state 9

    (4) program -> MEMORY_CMD_TOKEN MEMORY_LOC_TOKEN .

    $end            reduce using rule 4 (program -> MEMORY_CMD_TOKEN MEMORY_LOC_TOKEN .)

